# cdsMaster

./: .gitignore  README.md  countdown.hs
Defense/: bib.bib  main.bbl  main.nav  main.tex
Funktionale Programmierung ASQ/: countdown.hs  mhtrees.hs
Graphische Modelle Lab/exercise00/: result.npy
Graphische Modelle Lab/exercise02/: die1.npy
Graphische Modelle Lab/exercise03/: adj.npy  exercise3.ipynb  hgr_10252.tmp  utils.py
Graphische Modelle Lab/exercise03/compiler/util/c2d/darwiche_compiler_2015/src/: CMakeLists.txt
Graphische Modelle Lab/exercise04/: Exercise4.ipynb  q_i.p
Graphische Modelle Lab/exercise06/: exercise6.ipynb
Graphische Modelle Lab/exercise06/help/: docs.pkl  (+1 more)
Graphische Modelle Lab/exercise10/: exercise10.ipynb
Optimierung/Übung2/: aufgabe1.mod
Optimierung/Übung3/: median.py  übung3.mod
Parallel Computing 1/.ipynb_checkpoints/: notes-checkpoint.txt  square-checkpoint.csv
Parallel Computing 1/Übung1/: pc1_1.cpp  tall.csv
Semester 1/Funktionale Programmierung ASQ/: notes.hs  sudoku.hs
Semester 1/Optimierung/: Übung3.ipynb
Semester 2/: ex02.cpp  ex02_farin_lippmann.tar.xz
Semester 3/Tensor Computations Seminar/: derivation_rules.kra
Thesis/: bib.bib  main.aux  main.bbl  main.bcf  main.blg  main.fdb_latexmk  main.fls  main.pyg  main.run.xml  main.tex  main.toc
Wissenschaftliches Rechnen I/.ipynb_checkpoints/: ueb_1-checkpoint.ipynb
Wissenschaftliches Rechnen I/Übung1/: 1.1_Farin_Lippmann  ueb_1.ipynb
Wissenschaftliches Rechnen I/Übung4/: uebung4  uebung4.cpp
Wissenschaftliches Rechnen I/Übung5/: uebung5  uebung5.cpp
(+515 files in other folders)
